--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,3 +7,7 @@ $avatar-size: 60px;
 
 /* RWD */
 $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px, large-desktop: 1600px);
+
+/* transitions */
+$page-tr-duration: .3s;
+$page-tr-vert-offset: 20px;
