--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -2,6 +2,7 @@
 body {
   .page-content { padding:$gutter-base; }
   h1 { margin-top:0; }
+  p { margin-bottom:$gutter-base; }
 }
 
 /* page transitions */
