refactored users data access (via getters for formating

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 /* COLORS */
 $zebra-list-bg: rgba(0, 0, 0, .025);
 $primary: #ff5722;
+$selected-color:lighten($primary, 35%);
+$selected-focus-color:lighten($primary, 25%);
 
 /* DIMENSIONS */
 $gutter-base: 9px;
