--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -2,7 +2,9 @@ form { margin-left:auto; margin-right:auto; max-width:1200px;
     legend { font-size:28px; margin-bottom:$gutter-base; }
     fieldset { margin:($gutter-base*6) 0; }
     .fieldset-flexer { display:flex; flex-wrap:wrap; justify-content:space-between; }
-    .mdl-textfield { flex:0 1 auto; }
+    .mdl-textfield { flex:0 1 auto;
+        input:disabled { color:rgba(0, 0, 0, .35); }
+    }
     p { flex:1 1 auto; }
     .form-actions-toolbar { display:flex; flex-direction:row-reverse;
         button { margin-left:$gutter-base; flex:0 0 auto; align-self:center; }
