base chart settings
- dependencies OK
- weekly chart view + bar cmpnt + line cmpnt OK
- make data dynamic TODO

--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -28,3 +28,4 @@
     .mood-figure { margin:0; padding-left:$gutter-base*2; justify-content:flex-start; }
     .completion-figure { margin:0; }
 }
+/*** specific home card | WEEKLY-CHART-CARD ***/
