added week average home card

--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -21,6 +21,11 @@
     .mood-figure { margin:0 0 0 1rem; float:right; }
 }
 /*** specific home card | MY WEEK ***/
+/*** specific home card | MY WEEK AVERAGE ***/
+.home-card__weekly-user-average-indicator {
+    .mdl-card__supporting-text > * { display:flex; justify-content:space-between; }
+    .mood-figure { margin:0; padding-left:$gutter-base*2; flex:1 1 auto; justify-content:flex-start; }
+}
 /*** specific home card | AUTHENTICATE-CARD ***/
 /*** specific home card | DAY-INDICATOR-CARD ***/
 .home-card__day-indicator {
