--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -1,23 +1,3 @@
-/*** specific home card | PROFILE-CARD ***/
-// .home-card__profile {
-//     .mood-figure { margin:0 0 0 1rem; float:right; }
-// }
-/*** specific home card | MY WEEK ***/
-/*** specific home card | MY WEEK AVERAGE ***/
-// .home-card__weekly-user-average-indicator {
-//     .mdl-card__supporting-text > * { display:flex; justify-content:space-between; }
-//     .mood-figure { margin:0; padding-left:$gutter-base*2; flex:1 1 auto; justify-content:flex-start; }
-// }
-/*** specific home card | AUTHENTICATE-CARD ***/
-/*** specific home card | DAY-INDICATOR-CARD ***/
-// .home-card__day-indicator {
-//     .mdl-card__supporting-text > * { display:flex; justify-content:space-between; }
-//     .mood-figure, .completion-figure { flex:1 1 auto; }
-//     .mood-figure { margin:0; padding-left:$gutter-base*2; justify-content:flex-start; }
-//     .completion-figure { margin:0; }
-// }
-/*** specific home card | WEEKLY-CHART-CARD ***/
-
 /**
 *   CARDS STYLES GENERALS V2
 **/
@@ -36,7 +16,11 @@
     .mdl-card__media { background-color:transparent; }
 }
 
-/*** home card mood box ***/
-.home-card__mood-box {
-    h3 { padding-bottom:32px; }
+/*** home all users box ***/
+.home-card__allrespondent-profile-short-box {
+    ul { list-style:none; padding-left:0;
+      > li { padding-top:$gutter-base;
+        &:first-child { padding-top:0; }
+      }
+    }
 }
