--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,8 @@ $snack-bar-bg: rgba(0, 0, 0, .75);
 $gutter-base: 9px;
 $avatar-size: 60px;
 $home-cards-min-height: 175px;
+$header-small-height: 56px;
+$header-big-height: 64px;
 
 /* RWD */
 $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px, large-desktop: 1600px);
