--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -23,4 +23,13 @@
         &:first-child { padding-top:0; }
       }
     }
+
+    // completion box visible only for small screens
+    .completion-figure { margin-top:2*$gutter-base; }
+    @include media(">tablet") { 
+        .completion-figure { display:none; }
+    }
 }
+
+/*** home single completion box ***/
+.home-card__single-respondent-box .mdl-card__supporting-text { font-size:1.5em; display:flex; flex-direction:column; justify-content:center; }
