--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -34,6 +34,7 @@ h1 .material-icons { margin-right:$gutter-base*2; font-size:inherit; position:re
 h2 .material-icons { margin-right:$gutter-base; font-size:inherit; position:relative; top:9px; }
 
 /* links */
+a.moodys-link { color:$primary; font-weight:400; }
 a .material-icons { margin-right:$gutter-base; }
 
 /* mood figure (mood label + icon) */
