--- a/src/styles/nano/_user-list-item.scss
+++ b/src/styles/nano/_user-list-item.scss
@@ -1,4 +1,4 @@
 /* individual user item */
 .mdl-list__item--two-line , .mdl-list__item-primary-content { height:auto; }
-.mdl-list__item-avatar { width:$avatar-size; height:$avatar-size; border-radius:25%; }
+.mdl-list__item-avatar { width:$avatar-size; height:$avatar-size; border-radius:25%; background-color:#fff; }
 .mdl-button--icon { width:auto; height:auto; border-radius:25%; padding:$gutter-base/2; }
