time box styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,4 +21,5 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px, large-desktop: 1600
 
 /* transitions */
 $page-tr-duration: .3s;
+$btn-tr-duration: .3s;
 $page-tr-vert-offset: 20px;
