--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -33,3 +33,8 @@
 
 /*** home single completion box ***/
 .home-card__single-respondent-box .mdl-card__supporting-text { font-size:1.5em; display:flex; flex-direction:column; justify-content:center; }
+
+/**
+*   TIME TRAVEL CARDS
+**/
+.home-card__time-box { min-height:0; }
