time travel daily chart

--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -27,7 +27,7 @@
     // completion box visible only for small screens
     .completion-figure { margin-top:2*$gutter-base; }
     @include media(">tablet") { 
-        .completion-figure { display:none; }
+        .dashboard-section & .completion-figure { display:none; }
     }
 }
 
