--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,4 +22,5 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px, large-desktop: 1600
 /* transitions */
 $page-tr-duration: .3s;
 $btn-tr-duration: .3s;
+$list-tr-duration: .3s;
 $page-tr-vert-offset: 20px;
