--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -3,7 +3,9 @@ html body { font-family: "Roboto","Helvetica","Arial",sans-serif;
   .page-content { padding:2*$gutter-base; }
   h1 { margin-top:0; }
   p { margin-bottom:$gutter-base; }
-  .mdl-layout-title .mdl-navigation__link { font-size:inherit; opacity:inherit; }
+  .mdl-layout-title .mdl-navigation__link { font-size:inherit; opacity:inherit; padding:0;
+    @include media("<=400px") { font-size:0; }
+  }
 }
 
 /* route specific styles in content */
