--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $low-color: darken(red, 8%);
 $medium-color: rgba(0,0,0,.54);
 $high-color: darken(green, 5%);
 $snack-bar-bg: rgba(0, 0, 0, .75);
+$project-overlay-color: black;
 
 /* DIMENSIONS */
 $gutter-base: 9px;
