--- a/src/styles/_moodies-icon-font.scss
+++ b/src/styles/_moodies-icon-font.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/static/fonts/icomoon.eot?j537ct');
-  src:  url('/static/fonts/icomoon.eot?j537ct#iefix') format('embedded-opentype'),
-    url('/static/fonts/icomoon.ttf?j537ct') format('truetype'),
-    url('/static/fonts/icomoon.woff?j537ct') format('woff'),
-    url('/static/fonts/icomoon.svg?j537ct#icomoon') format('svg');
+  src:  url('/static/fonts/icomoon.eot');
+  src:  url('/static/fonts/icomoon.eot') format('embedded-opentype'),
+    url('/static/fonts/icomoon.ttf') format('truetype'),
+    url('/static/fonts/icomoon.woff') format('woff'),
+    url('/static/fonts/icomoon.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
