--- a/src/styles/nano/_snackbar.scss
+++ b/src/styles/nano/_snackbar.scss
@@ -1,5 +1,5 @@
 .snack {
-    .snack__item { min-width:150px; border-radius:2px; padding:$gutter-base; background-color:$snack-bar-bg; color:#fff; text-transform:uppercase; margin-top:$gutter-base; }
+    .snack__item { min-width:150px; border-radius:2px; padding:$gutter-base; background-color:$snack-bar-bg; color:#fff; margin-top:$gutter-base; }
     .material-icons { vertical-align:bottom; margin-right:$gutter-base; }
 }
 
@@ -7,4 +7,5 @@
 .snack__item {
     .avatar { border-radius:25%; margin-right:2*$gutter-base; }
     .mood { margin-left:2*$gutter-base; }
+    .badge-icon { margin-right:2*$gutter-base; width:$avatar-size; height:$avatar-size; }
 }
