--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -31,6 +31,13 @@
     }
 }
 
+/*** home mood box profile ***/
+.home-card__mood-box-profile {
+    @include media("<=large-desktop") {
+        .tank-container { display:none; }
+    }
+}
+
 /*** home single completion box ***/
 .home-card__single-respondent-box .mdl-card__supporting-text { font-size:1.5em; display:flex; flex-direction:column; justify-content:center; }
 
