[water tank] fix visibility issue on smaller screens

--- a/src/styles/nano/_cards.scss
+++ b/src/styles/nano/_cards.scss
@@ -34,7 +34,7 @@
 /*** home mood box profile ***/
 .home-card__mood-box-profile {
     @include media("<=large-desktop") {
-        .tank-container { display:none; }
+        .tank-wrapper { display:none; }
     }
 }
 
