[posts] added styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,3 +25,10 @@ $page-tr-duration: .3s;
 $btn-tr-duration: .3s;
 $list-tr-duration: .3s;
 $page-tr-vert-offset: 20px;
+
+/* posts */
+$post-time-text-color: rgba(255, 255, 255, 0.75);
+$post-text-color: #fff;
+$post-bg-color: #fff;
+$post-pill-size: 40px;
+$post-border-size: 4px;
