--- a/src/styles/nano/_posts.scss
+++ b/src/styles/nano/_posts.scss
@@ -1,1 +1,32 @@
-.post { padding: $gutter-base/2; border-radius:3px; background-color:#fff; color:initial; }
+.post { display:flex; align-items:center;
+    p { flex:1 1 auto; }
+    .post__meta { flex:0 0 30%; }
+}
+
+.post p { color:$post-text-color; font-style:italic; font-size:1.2rem; margin-bottom:0; }
+.post__meta { position:relative;
+    figure { margin:0; position:relative; }
+    .avatar { width:$post-pill-size; height:$post-pill-size; border-radius:50%; border:$post-border-size solid $post-bg-color; }
+    .avatar + img { position:absolute; top:-8px; background-color:$post-bg-color; border-radius:50%; border:($post-border-size/2) solid $post-bg-color; }
+    &:before { content:''; position:absolute; display:block; height:4px; background-color:$post-bg-color; top:($post-border-size + $post-pill-size)/2; }
+    time { position:absolute; font-size:0.85rem; top:($post-border-size + $post-pill-size/2); color:$post-time-text-color; }
+}
+
+.post-list {
+    li:nth-child(odd) .post { 
+        .post__meta { margin-left:3*$gutter-base;
+            .avatar + img { left:$post-pill-size * 0.78; }
+            &:before { left:$post-pill-size; right:0; }
+            time { left:$post-pill-size*1.25; right:0; }
+        }
+        p { text-align:right; }
+    }
+    li:nth-child(even) .post { flex-direction:row-reverse; 
+        .post__meta { margin-right:3*$gutter-base;
+            figure { text-align:right; }
+            .avatar + img { right:$post-pill-size * -0.19; }
+            &:before { right:$post-pill-size; left:0; }
+            time { text-align:right; right:$post-pill-size*1.28; left:0; }
+        }
+    }
+}
