[posts] home dashboard latest twoot

--- a/src/styles/nano/_posts.scss
+++ b/src/styles/nano/_posts.scss
@@ -1,9 +1,27 @@
-.post { display:flex; align-items:center;
-    p { flex:1 1 auto; }
-    .post__meta { flex:0 0 30%; }
+@mixin right-meta-post {
+    .post__meta { margin-left:3*$gutter-base;
+        .avatar + img { left:$post-pill-size * 0.78; }
+        &:before { left:$post-pill-size; right:0; }
+        time { left:$post-pill-size*1.25; right:0; }
+    }
+    p { text-align:right; }
+}
+@mixin left-meta-post { flex-direction:row-reverse; 
+    .post__meta { margin-right:3*$gutter-base;
+        figure { text-align:right; }
+        .avatar + img { right:$post-pill-size * -0.19; }
+        &:before { right:$post-pill-size; left:0; }
+        time { text-align:right; right:$post-pill-size*1.28; left:0; }
+    }
 }
 
-.post p { color:$post-text-color; font-style:italic; font-size:1.2rem; margin-bottom:0; }
+.post { display:flex; align-items:center;
+    p { flex:1 1 auto; }
+    .post__meta { flex:0 0 $post-meta-width; }
+    &.post-single { @include right-meta-post; }
+}
+
+.post p { color:$post-text-color; font-style:italic; font-size:px2rem(16); line-height:1.3; margin-bottom:0; }
 .post__meta { position:relative;
     figure { margin:0; position:relative; }
     .avatar { width:$post-pill-size; height:$post-pill-size; border-radius:50%; border:$post-border-size solid $post-bg-color; }
@@ -13,20 +31,6 @@
 }
 
 .post-list {
-    li:nth-child(odd) .post { 
-        .post__meta { margin-left:3*$gutter-base;
-            .avatar + img { left:$post-pill-size * 0.78; }
-            &:before { left:$post-pill-size; right:0; }
-            time { left:$post-pill-size*1.25; right:0; }
-        }
-        p { text-align:right; }
-    }
-    li:nth-child(even) .post { flex-direction:row-reverse; 
-        .post__meta { margin-right:3*$gutter-base;
-            figure { text-align:right; }
-            .avatar + img { right:$post-pill-size * -0.19; }
-            &:before { right:$post-pill-size; left:0; }
-            time { text-align:right; right:$post-pill-size*1.28; left:0; }
-        }
-    }
+    li:nth-child(odd) .post { @include right-meta-post; }
+    li:nth-child(even) .post { @include left-meta-post; }
 }
