[posts] style fix for phones

--- a/src/styles/nano/_dialog-box.scss
+++ b/src/styles/nano/_dialog-box.scss
@@ -1,6 +1,6 @@
 .dialog-box { position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); box-sizing:border-box; padding:20px; margin-top:0; margin-bottom:0; background-color:$grey; border-radius:2px;
     @include media('<tablet') { 
-        width:calc(100vw - 60px); height:calc(100vh - 60px);
+        width:calc(100vw - 60px); height:calc(100vh - 60px); top:calc(50% - 40px);
     }
     @include media('>=tablet', '<desktop') {
         width:75vw; height:75vh;
